df2-backend/base/dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delicious-fruit
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
    keel.sh/pollSchedule: "@every 2m"
  labels:
    app: delicious-fruit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delicious-fruit
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: delicious-fruit
    spec:
      volumes:
        - name: configuration
          secret:
            secretName: delicious-fruit-testing
            defaultMode: 420
      containers:
        - name: delicious-fruit
          image: ghcr.io/iwannacommunity/delfruit-backend
          ports:
            - containerPort: 4201
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configuration
              mountPath: /home/node/app/src/config/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
