df2-backend/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: delicious-fruit
  labels:
    app: delicious-fruit
spec:
  ports:
    - name: http
      protocol: TCP
      port: 4201
      targetPort: 4201
  selector:
    app: delicious-fruit
  type: ClusterIP
  sessionAffinity: None
