df2-backend/base/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delicious-fruit
  labels:
    app: delicious-fruit
  annotations:
    ingress.kubernetes.io/cors-enable: 'true'
    kubernetes.io/ingress.class: haproxy
spec:
  tls:
    - hosts:
        - df2.api.testing.iwannacommunity.com
      secretName: df2.api.testing.iwannacommunity.com
  rules:
    - host: df2.api.testing.iwannacommunity.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: delicious-fruit-testing
                port:
                  name: http
